# mtuci-rs

./: Cargo.toml
homework1/: Cargo.toml
homework1/src/: main2.rs  main3.rs  main4.rs  main5.rs
homework2/: Cargo.toml
homework2/src/: task1.rs  task2.rs
project/: Cargo.toml
project/src/: main.rs
tokio/: Cargo.toml
tokio/src/: main.rs
